apply of some architectural solutions adopted earlier